k8s/apps/meal-planner/meal-planner-frontend/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meal-planner-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: meal-planner-frontend
  template:
    metadata:
      labels:
        component: meal-planner-api
    spec:
      containers:
        - name: app
          image: gastbob40/meal-planner-frontend
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
