k8s/apps/meal-planner/meal-planner-frontend/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: meal-planner-frontend
spec:
  type: ClusterIP
  selector:
    component: meal-planner-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
