k8s/apps/meal-planner/meal-planner-frontend/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "meal-planner-frontend"
  namespace: "meal-planner"
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    cert-manager.io/revision-history-limit: "1"
    acme.cert-manager.io/http01-edit-in-place: "true"

spec:
  ingressClassName: public
  rules:
    - host: "meal-planner.gastbob40.ovh"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "meal-planner-frontend"
                port:
                  number: 3000
  tls:
    - hosts:
        - "meal-planner.gastbob40.ovh"
      secretName: "meal-planner.gastbob40.ovh-tls"
